[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iamsec-dtms"
version = "0.1.0"
description = "DTMS-like PDF to CSV converter (IoU, vertical-merged cell)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pdfplumber>=0.11.0",
  "pandas>=2.0.0",
  "streamlit>=1.32.0",
]

[project.scripts]
dtms-to-csv = "dtms.cli:main"

# ★ 패키지 자동 발견을 dtms로만 제한 (app/original 제외)
[tool.setuptools.packages.find]
where = ["."]
include = ["dtms*"]
exclude = ["app*", "original*", "scripts*", "tests*"]